# technical-test

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yml  Dockerfile  Makefile  README.md  docker-compose.yml  load_initial_data.py  pyproject.toml
apps/chat/: boot.py
apps/chat/http/: app.py
apps/chat/http/db/: mongo.py
apps/chat/http/routers/: __init__.py  chat.py  health.py
apps/chat/http/schemas/: models.py
apps/chat/http/views/: assistant_view.py
src/chat/: core.py
src/chat/domain/chat/: chat_models.py  conversation_schema.py  mongo_schema.py
src/chat/domain/generation/: langchain_conversor.py  text_models.py
src/chat/domain/searcher/: searcher_models.py
src/chat/generation/agents/: assistant.py  planner.py  reformulator.py
src/chat/generation/llm_clients/: gpt.py
src/chat/search/: arxiv.py  qdrant.py
src/settings/: settings.py
src/shared/: logger.py
