[tool.poetry]
name = "aardoiz-arxiv-test"
version = "0.1.0"
description = "Prueba técnica"
authors = ["aardoiz <aardoiz14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
httpx = "^0.27.0"
loguru = "^0.7.2"
openai = "^1.37.1"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"
pymongo = "^4.8.0"
uvicorn = "^0.30.3"
qdrant-client = "^1.10.1"
lxml = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.5"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
